cm-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp1
  labels:
    name: myapp1
spec:
  containers:
  - name: myapp1
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    volumeMounts:
    - name: test1-cmap-vol
      mountPath: /usr/share/nginx/html/

  volumes:
  - name:  test1-cmap-vol
    configMap:
      name: indexcm2
