cm2-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp2
  labels:
    name: myapp2
spec:
  containers:
  - name: myapp2
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    volumeMounts:
    - name: test2-cmap-vol
      mountPath: /root/test2

  volumes:
  - name:  test2-cmap-vol
    configMap:
      name: test2-cmap
