v1_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebv1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
      - name: web
        image: nginx:latest
        ports:
        - containerPort: 80
