np.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    name: myapp1
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
