svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web
    version:
  ports:
  - port: 80                 #clust-ip 포트번호
    targetPort: 80           #pod 포트번호(컨테이너의 포트번호)
